apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.2'
    testCompile('org.assertj:assertj-core:3.11.1')
}

test {
    useJUnitPlatform()
}
